# code

./: Christina.txt  LICENSE  Python_Socket_SDS_SCDP.py  photonics_library.py
GDS_scripting/: 0719_20_disk_ring.py  10-04-20_ErSOIwaveguide.py  10-18-20_Si_phcs.py  photonics.py
cmder/config/: .history  user-ConEmu.xml
daqtest/: test.py
docs/source/: about.rst  architecture.rst  conf.py  creatingspyrelet.rst  drivers.rst  exampleconfig.rst  examplespyrelet.rst  index.rst  insidelantz.rst  insidespyre.rst  installcode.rst  keysight.rst  runspyre.rst
drivers_backup/ami/: AMI_430.py
drivers_backup/anritsu/: MS2721b.py
drivers_backup/arduino/: goniometer.py
drivers_backup/arduino/gonioupdated/: gonioupdated.ino
drivers_backup/bristol/: libbristol.lib
drivers_backup/keysight/: Keysight_33622A.py  arbseq_class.py  pulse_sequence.py
drivers_backup/linux-gpib-4.2.0/: README.txt
drivers_backup/linux-gpib-4.2.0/linux-gpib-kernel-4.2.0/: Makefile.am  Makefile.in  bootstrap  config.h.in  configure.ac
drivers_backup/linux-gpib-4.2.0/linux-gpib-kernel-4.2.0/autom4te.cache/: requests  traces.0
drivers_backup/linux-gpib-4.2.0/linux-gpib-kernel-4.2.0/drivers/gpib/: Makefile
drivers_backup/linux-gpib-4.2.0/linux-gpib-kernel-4.2.0/drivers/gpib/agilent_82350b/: agilent_82350b_init.c
drivers_backup/linux-gpib-4.2.0/linux-gpib-kernel-4.2.0/drivers/gpib/agilent_82357a/: agilent_82357a.h
drivers_backup/linux-gpib-4.2.0/linux-gpib-kernel-4.2.0/drivers/gpib/lpvo_usb_gpib/: lpvo_usb_gpib.c
drivers_backup/linux-gpib-4.2.0/linux-gpib-kernel-4.2.0/drivers/gpib/tms9914/: tms9914_aux.c
drivers_backup/linux-gpib-4.2.0/linux-gpib-user-4.2.0/: INSTALL  config.h.in  libtool
drivers_backup/ni/: __init__.py
drivers_backup/qutools/lib/: tdcbase.lib
drivers_backup/stanford/: srs900.py
drivers_backup/toptica/: dlcpro2.py
drivers_backup/windfreak/: synthnvpro.py
lantz/: setup.py
lantz/lantz/: feat.py  foreign.py  log.py  messagebased.py
lantz/lantz/attocube/: main.py
lantz/lantz/drivers/: Read Me.txt  SDG2122X.py  __init__.py  lantz_server.py
lantz/lantz/drivers/linux-gpib-4.2.0/linux-gpib-kernel-4.2.0/drivers/: Makefile  Makefile.am  Makefile.in
lantz/lantz/drivers/linux-gpib-4.2.0/linux-gpib-kernel-4.2.0/drivers/gpib/: Module.symvers
lantz/lantz/drivers/linux-gpib-4.2.0/linux-gpib-kernel-4.2.0/drivers/gpib/agilent_82350b/: agilent_82350b_read.c
lantz/lantz/drivers/linux-gpib-4.2.0/linux-gpib-kernel-4.2.0/drivers/gpib/agilent_82357a/: agilent_82357a.c
lantz/lantz/drivers/linux-gpib-4.2.0/linux-gpib-kernel-4.2.0/drivers/gpib/eastwood/: fluke_gpib.c
lantz/lantz/drivers/linux-gpib-4.2.0/linux-gpib-kernel-4.2.0/drivers/gpib/fmh_gpib/: fmh_gpib.c
lantz/lantz/drivers/linux-gpib-4.2.0/linux-gpib-kernel-4.2.0/drivers/gpib/include/: gpibP.h  gpib_types.h  tms9914.h
lantz/lantz/drivers/linux-gpib-4.2.0/linux-gpib-kernel-4.2.0/drivers/gpib/ni_usb/: ni_usb_gpib.c
lantz/lantz/drivers/linux-gpib-4.2.0/linux-gpib-kernel-4.2.0/drivers/gpib/sys/: osfuncs.c  osinit.c
lantz/lantz/drivers/linux-gpib-4.2.0/linux-gpib-user-4.2.0/usb/: Makefile  Makefile.am  Makefile.in
lantz/lantz/drivers/linux-gpib-4.2.0/linux-gpib-user-4.2.0/usb/agilent_82357a/: 99-agilent_82357a.rules  99-agilent_82357a.rules.in  Makefile  Makefile.am  Makefile.in  agilent_82357a  agilent_82357a.in
lantz/lantz/drivers/linux-gpib-4.2.0/linux-gpib-user-4.2.0/usb/ni_usb_gpib/: 99-ni_usb_gpib.rules  99-ni_usb_gpib.rules.in  Makefile  Makefile.am  ni_usb_gpib  ni_usb_gpib.in
lantz/lantz/ui/: app.py  widgets.py
lantz/lantz/utils/: qt.py  qt_loaders.py
pyqtgraph/pyqtgraph/: ptime.py
pyqtgraph/pyqtgraph/graphicsItems/: PlotCurveItem.py  PlotDataItem.py
spyre/: .gitignore  README.md  setup.py
spyre/Spyre.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
spyre/dev/: fiber_spectroscopy.py
spyre/spyre/: __init__.py  __main__.py  dataset.py  element.py  instrument.py  monochromatortest_spyrelet.py  persist.py  plotting.py  repository.py  spyre.py  spyrelet.py  task.py  util.py
spyre/spyre/spyrelets/: CPMGvsN_single_shot.py  CPMGvstau_single_shot.py  Customized48vstau_single_shot_stitch.py  Customized48vstau_single_shot_stitch_repeat.py  Customized72vstau_single_shot_stitch.py  Customized72vstau_single_shot_stitch_repeat.py  DONTDELETE_spyrelet.py  Droid60_sweeptau.py  Droid60vstau_single_shot_stitch.py  Droid60vstau_single_shot_stitch_repeat.py  Er2O3_Noah_spyrelet.py  ErSOIspectroscopy_spyrelet.py  Er_LYF_holeburning_spyrelet.py  Er_LYF_modulation_V2_spyrelet.py  Er_LYF_modulation_burleigh_spyrelet - Copy (2).py  Er_LYF_modulation_burleigh_spyrelet - Copy.py  Er_LYF_modulation_burleigh_spyrelet.py  ErrorSignalScan.py  ErrorSignalScanSingleDev.py  HillClimbing2.py  IVcurve_spyrelet.py  ODMR.py  ODMR_longpulse.py  PLCounts_spyrelet.py  PLpiezo_cwicker_spyrelet.py  PLpiezo_noWM_spyrelet.py  RamanHeterodyne.py  RamanHeterodyne_Pulsed.py  Spin_ID.py  Spin_Pulse_Demo.py  Spin_T1.py  Spin_T2 _ID.py  Spin_T2.py  Spin_T2_Optical_Saturation.py  ThreePulse.py  TwoPulse.py  (+186 more)
spyre/testing/: 05092019_DCR_Test.csv  05092019_SNSPD2_DCR_4uA_10uA_500nARes_60secExp_2.csv  0_vals.p  CPMG_vs_tau_single_shot.py  CPMGvsN_single_shot.py  Customized48vstau_single_shot_stitch.py  Customized48vstau_single_shot_stitch_repeat.py  Customized72vstau_single_shot_stitch.py  Customized72vstau_single_shot_stitch_repeat.py  Droid60vstau_single_shot.py  Droid60vstau_single_shot_stitch.py  Droid60vstau_single_shot_stitch_repeat.py  Er2O3_Noah.py  Er_LYF_holeburning.py  Er_LYF_modulation_V2.py  Er_LYF_modulation_burleigh.py  HillClimbing.py  IV_Curve.py  IVcurve.py  KDDxyvstau_single_shot.py  List of equipment addresses.txt  PLCounts.py  PLpiezo_WM.py  PLpiezo_YH.py  PLpiezo_cwicker.py  PLpiezo_noWM.py  SpinT2_HDAWG.py  Wahuha.py  XY16vstau_single_shot.py  XY8_sweeptau.py  XY8vsN.py  XY8vsN_single_shot_stitch.py  XY8vstau_single_shot.py  XY8vstau_single_shot_stitch.py  XY8vstau_single_shot_stitch_repeat.py  XYB_sweeptau.py  XYBvstau_single_shot_stitch.py  XYBvstau_single_shot_stitch_repeat.py  align2.py  align3.py  (+144 more)
(+477 files in other folders)
